--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^7.4|^8.0",
     "ext-json": "*",
     "juststeveking/http-auth-strategies": "^1.1",
     "juststeveking/http-slim": "^1.2",
